Feature ET-27: Run ERP Product Without UI Servlet Hierarchy